k3s/manifests/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashy
spec:
  type: ClusterIP
  selector:
    app: dashy
  ports:
    - name: http
      port: 8080
      targetPort: 8080
